--- a/templates/entertainment_product/_form.html.twig
+++ b/templates/entertainment_product/_form.html.twig
@@ -1,7 +1,11 @@
 <div class="form-control">
     {{ form_start(form) }}
 
-    {{ form_errors(form) }}
+    {% if not form.vars.valid %}
+        <div class="alert alert-error">
+            {{ form_errors(form) }}
+        </div>
+    {% endif %}
 
     <div class="form-group">
         <label class="col-2 pt-2">{{ form_label(form.name) }}</label>
